feat(MioLibPatcher): add lazyyyyy bootstrap handler